GTK4/Package_Tools/include-C/gtk/in_Arbeit/fertig/gtkwidget.h


#define GTK_TYPE_WIDGET                   (gtk_widget_get_type ())
#define GTK_WIDGET(widget)                (G_TYPE_CHECK_INSTANCE_CAST ((widget), GTK_TYPE_WIDGET, GtkWidget))
#define GTK_WIDGET_CLASS(klass)           (G_TYPE_CHECK_CLASS_CAST ((klass), GTK_TYPE_WIDGET, GtkWidgetClass))
#define GTK_IS_WIDGET(widget)             (G_TYPE_CHECK_INSTANCE_TYPE ((widget), GTK_TYPE_WIDGET))
#define GTK_IS_WIDGET_CLASS(klass)        (G_TYPE_CHECK_CLASS_TYPE ((klass), GTK_TYPE_WIDGET))
#define GTK_WIDGET_GET_CLASS(obj)         (G_TYPE_INSTANCE_GET_CLASS ((obj), GTK_TYPE_WIDGET, GtkWidgetClass))
#define GTK_TYPE_REQUISITION              (gtk_requisition_get_type ())
typedef struct _GtkWidgetClass         GtkWidgetClass;
typedef gboolean (*GtkTickCallback) (GtkWidget     *widget,
                                     GdkFrameClock *frame_clock,
                                     gpointer       user_data);
GType      gtk_widget_get_type            (void) ;
void     gtk_widget_set_margin_bottom (GtkWidget *widget,
                                       int        margin);
gboolean     gtk_widget_is_ancestor     (GtkWidget      *widget,
                                         GtkWidget      *ancestor);
gboolean     gtk_widget_translate_coordinates (GtkWidget  *src_widget,
                                               GtkWidget  *dest_widget,
                                               double      src_x,
                                               double      src_y,
                                               double     *dest_x,
                                               double     *dest_y);
gboolean     gtk_widget_contains              (GtkWidget  *widget,
                                               double      x,
                                               double      y);
GtkWidget *  gtk_widget_pick                  (GtkWidget   *widget,
                                               double       x,
                                               double       y,
                                               GtkPickFlags flags);
void         gtk_widget_add_controller        (GtkWidget          *widget,
                                               GtkEventController *controller);
void         gtk_widget_remove_controller     (GtkWidget          *widget,
                                               GtkEventController *controller);
PangoContext *gtk_widget_create_pango_context (GtkWidget   *widget);
PangoContext *gtk_widget_get_pango_context    (GtkWidget   *widget);
void gtk_widget_set_font_options (GtkWidget                  *widget,
                                  const cairo_font_options_t *options);
const cairo_font_options_t *gtk_widget_get_font_options (GtkWidget *widget);
PangoLayout  *gtk_widget_create_pango_layout  (GtkWidget   *widget,
                                               const char *text);
void             gtk_widget_set_direction         (GtkWidget        *widget,
                                                   GtkTextDirection  dir);
GtkTextDirection gtk_widget_get_direction         (GtkWidget        *widget);
void             gtk_widget_set_default_direction (GtkTextDirection  dir);
GtkTextDirection gtk_widget_get_default_direction (void);
void                    gtk_widget_set_cursor                   (GtkWidget              *widget,
                                                                 GdkCursor              *cursor);
void                    gtk_widget_set_cursor_from_name         (GtkWidget              *widget,
                                                                 const char             *name);
GdkCursor *             gtk_widget_get_cursor                   (GtkWidget              *widget);
GList* gtk_widget_list_mnemonic_labels  (GtkWidget *widget);
void   gtk_widget_add_mnemonic_label    (GtkWidget *widget,
                                         GtkWidget *label);
void   gtk_widget_remove_mnemonic_label (GtkWidget *widget,
                                         GtkWidget *label);
void            gtk_widget_trigger_tooltip_query        (GtkWidget   *widget);
void            gtk_widget_set_tooltip_text             (GtkWidget   *widget,
                                                         const char  *text);
const char *    gtk_widget_get_tooltip_text             (GtkWidget   *widget);
void            gtk_widget_set_tooltip_markup           (GtkWidget   *widget,
                                                         const char  *markup);
const char *    gtk_widget_get_tooltip_markup           (GtkWidget   *widget);
void            gtk_widget_set_has_tooltip              (GtkWidget   *widget,
                                                         gboolean     has_tooltip);
gboolean        gtk_widget_get_has_tooltip              (GtkWidget   *widget);
GType           gtk_requisition_get_type (void) ;
GtkRequisition *gtk_requisition_new      (void) ;
GtkRequisition *gtk_requisition_copy     (const GtkRequisition *requisition);
void            gtk_requisition_free     (GtkRequisition       *requisition);
gboolean     gtk_widget_in_destruction (GtkWidget *widget);
GtkStyleContext * gtk_widget_get_style_context (GtkWidget *widget);
void              gtk_widget_class_set_css_name (GtkWidgetClass *widget_class,
                                                 const char     *name);
const char *      gtk_widget_class_get_css_name (GtkWidgetClass *widget_class);
guint gtk_widget_add_tick_callback (GtkWidget       *widget,
                                    GtkTickCallback  callback,
                                    gpointer         user_data,
                                    GDestroyNotify   notify);
void gtk_widget_remove_tick_callback (GtkWidget       *widget,
                                      guint            id);
void    gtk_widget_init_template                        (GtkWidget             *widget);
GObject *gtk_widget_get_template_child                  (GtkWidget             *widget,
                                                         GType                  widget_type,
                                                         const char            *name);
void    gtk_widget_dispose_template                     (GtkWidget             *widget,
                                                         GType                  widget_type);
void    gtk_widget_class_set_template                   (GtkWidgetClass        *widget_class,
                                                         GBytes                *template_bytes);
void    gtk_widget_class_set_template_from_resource     (GtkWidgetClass        *widget_class,
                                                         const char            *resource_name);
void    gtk_widget_class_bind_template_callback_full    (GtkWidgetClass        *widget_class,
                                                         const char            *callback_name,
                                                         GCallback              callback_symbol);
void    gtk_widget_class_set_template_scope             (GtkWidgetClass        *widget_class,
                                                         GtkBuilderScope       *scope);
void    gtk_widget_class_bind_template_child_full       (GtkWidgetClass        *widget_class,
                                                         const char            *name,
                                                         gboolean               internal_child,
                                                         gssize                 struct_offset);
void                    gtk_widget_insert_action_group  (GtkWidget    *widget,
                                                         const char   *name,
                                                         GActionGroup *group);
gboolean                gtk_widget_activate_action      (GtkWidget  *widget,
                                                         const char *name,
                                                         const char *format_string,
                                                         ...);
gboolean                gtk_widget_activate_action_variant (GtkWidget  *widget,
                                                            const char *name,
                                                            GVariant   *args);
void                    gtk_widget_activate_default     (GtkWidget *widget);
void                    gtk_widget_set_font_map         (GtkWidget             *widget,
                                                         PangoFontMap          *font_map);
PangoFontMap *          gtk_widget_get_font_map         (GtkWidget             *widget);
GtkWidget *             gtk_widget_get_first_child      (GtkWidget *widget);
GtkWidget *             gtk_widget_get_last_child       (GtkWidget *widget);
GtkWidget *             gtk_widget_get_next_sibling     (GtkWidget *widget);
GtkWidget *             gtk_widget_get_prev_sibling     (GtkWidget *widget);
GListModel *            gtk_widget_observe_children     (GtkWidget *widget);
GListModel *            gtk_widget_observe_controllers  (GtkWidget *widget);
void                    gtk_widget_insert_after         (GtkWidget *widget,
                                                         GtkWidget *parent,
                                                         GtkWidget *previous_sibling);
void                    gtk_widget_insert_before        (GtkWidget *widget,
                                                         GtkWidget *parent,
                                                         GtkWidget *next_sibling);
void                    gtk_widget_set_focus_child      (GtkWidget *widget,
                                                         GtkWidget *child);
GtkWidget *             gtk_widget_get_focus_child      (GtkWidget *widget);
void                    gtk_widget_snapshot_child       (GtkWidget   *widget,
                                                         GtkWidget   *child,
                                                         GtkSnapshot *snapshot);
gboolean                gtk_widget_should_layout        (GtkWidget   *widget);
const char *            gtk_widget_get_css_name         (GtkWidget   *self) ;
void                    gtk_widget_add_css_class        (GtkWidget   *widget,
                                                         const char  *css_class);
void                    gtk_widget_remove_css_class     (GtkWidget   *widget,
                                                         const char  *css_class);
gboolean                gtk_widget_has_css_class        (GtkWidget   *widget,
                                                         const char  *css_class);
char **                 gtk_widget_get_css_classes      (GtkWidget   *widget);
void                    gtk_widget_set_css_classes      (GtkWidget   *widget,
                                                         const char **classes);
void                    gtk_widget_get_color            (GtkWidget   *widget,
                                                         GdkRGBA     *color);
typedef void (* GtkWidgetActionActivateFunc) (GtkWidget  *widget,
                                              const char *action_name,
                                              GVariant   *parameter);
void                    gtk_widget_class_install_action (GtkWidgetClass              *widget_class,
                                                         const char                  *action_name,
                                                         const char                  *parameter_type,
                                                         GtkWidgetActionActivateFunc  activate);
void                    gtk_widget_class_install_property_action (GtkWidgetClass *widget_class,
                                                                  const char     *action_name,
                                                                  const char     *property_name);
gboolean               gtk_widget_class_query_action  (GtkWidgetClass      *widget_class,
                                                       guint                index_,
                                                       GType               *owner,
                                                       const char         **action_name,
                                                       const GVariantType **parameter_type,
                                                       const char         **property_name);
void                    gtk_widget_action_set_enabled (GtkWidget  *widget,
                                                       const char *action_name,
                                                       gboolean    enabled);
void                    gtk_widget_class_set_accessible_role    (GtkWidgetClass    *widget_class,
                                                                 GtkAccessibleRole  accessible_role);
GtkAccessibleRole       gtk_widget_class_get_accessible_role    (GtkWidgetClass    *widget_class);