GTK4/Package_Tools/pas_units/GTK/gtkwidget.pas

procedure gtk_widget_set_margin_bottom(widget: PGtkWidget; margin: longint); cdecl; external gtklib;
function gtk_widget_is_ancestor(widget: PGtkWidget; ancestor: PGtkWidget): Tgboolean; cdecl; external gtklib;
function gtk_widget_translate_coordinates(src_widget: PGtkWidget; dest_widget: PGtkWidget; src_x: Tdouble; src_y: Tdouble; dest_x: Pdouble;
  dest_y: Pdouble): Tgboolean; cdecl; external gtklib;
function gtk_widget_contains(widget: PGtkWidget; x: Tdouble; y: Tdouble): Tgboolean; cdecl; external gtklib;
function gtk_widget_pick(widget: PGtkWidget; x: Tdouble; y: Tdouble; flags: TGtkPickFlags): PGtkWidget; cdecl; external gtklib;
procedure gtk_widget_add_controller(widget: PGtkWidget; controller: PGtkEventController); cdecl; external gtklib;
procedure gtk_widget_remove_controller(widget: PGtkWidget; controller: PGtkEventController); cdecl; external gtklib;
function gtk_widget_create_pango_context(widget: PGtkWidget): PPangoContext; cdecl; external gtklib;
function gtk_widget_get_pango_context(widget: PGtkWidget): PPangoContext; cdecl; external gtklib;
procedure gtk_widget_set_font_options(widget: PGtkWidget; options: Pcairo_font_options_t); cdecl; external gtklib;
function gtk_widget_get_font_options(widget: PGtkWidget): Pcairo_font_options_t; cdecl; external gtklib;
function gtk_widget_create_pango_layout(widget: PGtkWidget; Text: PChar): PPangoLayout; cdecl; external gtklib;
procedure gtk_widget_set_direction(widget: PGtkWidget; dir: TGtkTextDirection); cdecl; external gtklib;
function gtk_widget_get_direction(widget: PGtkWidget): TGtkTextDirection; cdecl; external gtklib;
procedure gtk_widget_set_default_direction(dir: TGtkTextDirection); cdecl; external gtklib;
function gtk_widget_get_default_direction: TGtkTextDirection; cdecl; external gtklib;
procedure gtk_widget_set_cursor(widget: PGtkWidget; cursor: PGdkCursor); cdecl; external gtklib;
procedure gtk_widget_set_cursor_from_name(widget: PGtkWidget; Name: PChar); cdecl; external gtklib;
function gtk_widget_get_cursor(widget: PGtkWidget): PGdkCursor; cdecl; external gtklib;
function gtk_widget_list_mnemonic_labels(widget: PGtkWidget): PGList; cdecl; external gtklib;
procedure gtk_widget_add_mnemonic_label(widget: PGtkWidget; _label: PGtkWidget); cdecl; external gtklib;
procedure gtk_widget_remove_mnemonic_label(widget: PGtkWidget; _label: PGtkWidget); cdecl; external gtklib;
procedure gtk_widget_trigger_tooltip_query(widget: PGtkWidget); cdecl; external gtklib;
procedure gtk_widget_set_tooltip_text(widget: PGtkWidget; Text: PChar); cdecl; external gtklib;
function gtk_widget_get_tooltip_text(widget: PGtkWidget): PChar; cdecl; external gtklib;
procedure gtk_widget_set_tooltip_markup(widget: PGtkWidget; markup: PChar); cdecl; external gtklib;
function gtk_widget_get_tooltip_markup(widget: PGtkWidget): PChar; cdecl; external gtklib;
procedure gtk_widget_set_has_tooltip(widget: PGtkWidget; has_tooltip: Tgboolean); cdecl; external gtklib;
function gtk_widget_get_has_tooltip(widget: PGtkWidget): Tgboolean; cdecl; external gtklib;
function gtk_requisition_get_type: TGType; cdecl; external gtklib;
function gtk_requisition_new: PGtkRequisition; cdecl; external gtklib;
function gtk_requisition_copy(requisition: PGtkRequisition): PGtkRequisition; cdecl; external gtklib;
procedure gtk_requisition_free(requisition: PGtkRequisition); cdecl; external gtklib;
function gtk_widget_in_destruction(widget: PGtkWidget): Tgboolean; cdecl; external gtklib;
function gtk_widget_get_style_context(widget: PGtkWidget): PGtkStyleContext; cdecl; external gtklib;
procedure gtk_widget_class_set_css_name(widget_class: PGtkWidgetClass; Name: PChar); cdecl; external gtklib;
function gtk_widget_class_get_css_name(widget_class: PGtkWidgetClass): PChar; cdecl; external gtklib;
function gtk_widget_add_tick_callback(widget: PGtkWidget; callback: TGtkTickCallback; user_data: Tgpointer; notify: TGDestroyNotify): Tguint; cdecl; external gtklib;
procedure gtk_widget_remove_tick_callback(widget: PGtkWidget; id: Tguint); cdecl; external gtklib;


{#define gtk_widget_class_bind_template_callback(widget_class, callback) \ }
{  gtk_widget_class_bind_template_callback_full (GTK_WIDGET_CLASS (widget_class), \ }
{                                                #callback, \ }
{                                                G_CALLBACK (callback)) }

{#define gtk_widget_class_bind_template_child(widget_class, TypeName, member_name) \ }
{  gtk_widget_class_bind_template_child_full (widget_class, \ }
{                                             #member_name, \ }
{                                             FALSE, \ }
{                                             G_STRUCT_OFFSET (TypeName, member_name)) }

{#define gtk_widget_class_bind_template_child_internal(widget_class, TypeName, member_name) \ }
{  gtk_widget_class_bind_template_child_full (widget_class, \ }
{                                             #member_name, \ }
{                                             TRUE, \ }
{                                             G_STRUCT_OFFSET (TypeName, member_name)) }

{#define gtk_widget_class_bind_template_child_private(widget_class, TypeName, member_name) \ }
{  gtk_widget_class_bind_template_child_full (widget_class, \ }
{                                             #member_name, \ }
{                                             FALSE, \ }
{                                             G_PRIVATE_OFFSET (TypeName, member_name)) }

{#define gtk_widget_class_bind_template_child_internal_private(widget_class, TypeName, member_name) \ }
{  gtk_widget_class_bind_template_child_full (widget_class, \ }
{                                             #member_name, \ }
{                                             TRUE, \ }
{                                             G_PRIVATE_OFFSET (TypeName, member_name)) }

procedure gtk_widget_init_template(widget: PGtkWidget); cdecl; external gtklib;
function gtk_widget_get_template_child(widget: PGtkWidget; widget_type: TGType; Name: PChar): PGObject; cdecl; external gtklib;
procedure gtk_widget_dispose_template(widget: PGtkWidget; widget_type: TGType); cdecl; external gtklib;
procedure gtk_widget_class_set_template(widget_class: PGtkWidgetClass; template_bytes: PGBytes); cdecl; external gtklib;
procedure gtk_widget_class_set_template_from_resource(widget_class: PGtkWidgetClass; resource_name: PChar); cdecl; external gtklib;
procedure gtk_widget_class_bind_template_callback_full(widget_class: PGtkWidgetClass; callback_name: PChar; callback_symbol: TGCallback); cdecl; external gtklib;
procedure gtk_widget_class_set_template_scope(widget_class: PGtkWidgetClass; scope: PGtkBuilderScope); cdecl; external gtklib;
procedure gtk_widget_class_bind_template_child_full(widget_class: PGtkWidgetClass; Name: PChar; internal_child: Tgboolean; struct_offset: Tgssize); cdecl; external gtklib;
procedure gtk_widget_insert_action_group(widget: PGtkWidget; Name: PChar; group: PGActionGroup); cdecl; external gtklib;
function gtk_widget_activate_action(widget: PGtkWidget; Name: PChar; format_string: PChar; args: array of const): Tgboolean; cdecl; external gtklib;
function gtk_widget_activate_action(widget: PGtkWidget; Name: PChar; format_string: PChar): Tgboolean; cdecl; external gtklib;
function gtk_widget_activate_action_variant(widget: PGtkWidget; Name: PChar; args: PGVariant): Tgboolean; cdecl; external gtklib;
procedure gtk_widget_activate_default(widget: PGtkWidget); cdecl; external gtklib;
procedure gtk_widget_set_font_map(widget: PGtkWidget; font_map: PPangoFontMap); cdecl; external gtklib;
function gtk_widget_get_font_map(widget: PGtkWidget): PPangoFontMap; cdecl; external gtklib;
function gtk_widget_get_first_child(widget: PGtkWidget): PGtkWidget; cdecl; external gtklib;
function gtk_widget_get_last_child(widget: PGtkWidget): PGtkWidget; cdecl; external gtklib;
function gtk_widget_get_next_sibling(widget: PGtkWidget): PGtkWidget; cdecl; external gtklib;
function gtk_widget_get_prev_sibling(widget: PGtkWidget): PGtkWidget; cdecl; external gtklib;
function gtk_widget_observe_children(widget: PGtkWidget): PGListModel; cdecl; external gtklib;
function gtk_widget_observe_controllers(widget: PGtkWidget): PGListModel; cdecl; external gtklib;
procedure gtk_widget_insert_after(widget: PGtkWidget; parent: PGtkWidget; previous_sibling: PGtkWidget); cdecl; external gtklib;
procedure gtk_widget_insert_before(widget: PGtkWidget; parent: PGtkWidget; next_sibling: PGtkWidget); cdecl; external gtklib;
procedure gtk_widget_set_focus_child(widget: PGtkWidget; child: PGtkWidget); cdecl; external gtklib;
function gtk_widget_get_focus_child(widget: PGtkWidget): PGtkWidget; cdecl; external gtklib;
procedure gtk_widget_snapshot_child(widget: PGtkWidget; child: PGtkWidget; snapshot: PGtkSnapshot); cdecl; external gtklib;
function gtk_widget_should_layout(widget: PGtkWidget): Tgboolean; cdecl; external gtklib;
function gtk_widget_get_css_name(self: PGtkWidget): PChar; cdecl; external gtklib;
procedure gtk_widget_add_css_class(widget: PGtkWidget; css_class: PChar); cdecl; external gtklib;
procedure gtk_widget_remove_css_class(widget: PGtkWidget; css_class: PChar); cdecl; external gtklib;
function gtk_widget_has_css_class(widget: PGtkWidget; css_class: PChar): Tgboolean; cdecl; external gtklib;
function gtk_widget_get_css_classes(widget: PGtkWidget): PPchar; cdecl; external gtklib;
procedure gtk_widget_set_css_classes(widget: PGtkWidget; Classes: PPchar); cdecl; external gtklib;
procedure gtk_widget_get_color(widget: PGtkWidget; color: PGdkRGBA); cdecl; external gtklib;

type
  TGtkWidgetActionActivateFunc = procedure(widget: PGtkWidget; action_name: PChar; parameter: PGVariant); cdecl;

procedure gtk_widget_class_install_action(widget_class: PGtkWidgetClass; action_name: PChar; parameter_type: PChar; activate: TGtkWidgetActionActivateFunc); cdecl; external gtklib;
procedure gtk_widget_class_install_property_action(widget_class: PGtkWidgetClass; action_name: PChar; property_name: PChar); cdecl; external gtklib;
function gtk_widget_class_query_action(widget_class: PGtkWidgetClass; index_: Tguint; owner: PGType; action_name: PPchar; parameter_type: PPGVariantType;
  property_name: PPchar): Tgboolean; cdecl; external gtklib;
procedure gtk_widget_action_set_enabled(widget: PGtkWidget; action_name: PChar; Enabled: Tgboolean); cdecl; external gtklib;
procedure gtk_widget_class_set_accessible_role(widget_class: PGtkWidgetClass; accessible_role: TGtkAccessibleRole); cdecl; external gtklib;
function gtk_widget_class_get_accessible_role(widget_class: PGtkWidgetClass): TGtkAccessibleRole; cdecl; external gtklib;

// === Konventiert am: 11-7-24 22:34:24 ===

function GTK_TYPE_WIDGET: TGType;
function GTK_WIDGET(widget: Pointer): PGtkWidget;
function GTK_WIDGET_CLASS(klass: Pointer): PGtkWidgetClass;
function GTK_IS_WIDGET(widget: Pointer): Tgboolean;
function GTK_IS_WIDGET_CLASS(klass: Pointer): Tgboolean;
function GTK_WIDGET_GET_CLASS(obj: Pointer): PGtkWidgetClass;

function GTK_TYPE_REQUISITION: TGType;

implementation

function GTK_TYPE_WIDGET: TGType;
begin
  GTK_TYPE_WIDGET := gtk_widget_get_type;
end;

function GTK_WIDGET(widget: Pointer): PGtkWidget;
begin
  Result := PGtkWidget(g_type_check_instance_cast(widget, GTK_TYPE_WIDGET));
end;

function GTK_WIDGET_CLASS(klass: Pointer): PGtkWidgetClass;
begin
  Result := PGtkWidgetClass(g_type_check_class_cast(klass, GTK_TYPE_WIDGET));
end;

function GTK_IS_WIDGET(widget: Pointer): Tgboolean;
begin
  Result := g_type_check_instance_is_a(widget, GTK_TYPE_WIDGET);
end;

function GTK_IS_WIDGET_CLASS(klass: Pointer): Tgboolean;
begin
  Result := g_type_check_class_is_a(klass, GTK_TYPE_WIDGET);
end;

function GTK_WIDGET_GET_CLASS(obj: Pointer): PGtkWidgetClass;
begin
  Result := PGtkWidgetClass(PGTypeInstance(obj)^.g_class);
end;

// ====

function GTK_TYPE_REQUISITION: TGType;
begin
  GTK_TYPE_REQUISITION := gtk_requisition_get_type;
end;

end.
